--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" type="image/x-icon" href="borrowbigger.png" />
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/scripts.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -12,14 +13,14 @@
 </head>
 
 <body>
+  <img  id="logoImg" src="images/logo.png" alt="Our Logo">
+
   <h1 class="title">Borrow Up</h1>
   <center>
     <h2 class="titleWords">Bringing People Closer Together</h2>
   </center>
   <div class="navbar">
-    <a id="loginInfo" style="float:left">Logged in as: <span class="userLogin"></span></a>
-    <a id="logoutInfo" style="float:left">Successfully Logged Out</a>
-    <a id="additembutton" style="float:left" data-toggle="modal" data-target="#myModal" href="#about">Add Item</a>
+    <a data-toggle="modal" data-target="#myModal" href="#about">Add Item</a>
     <a class="contactUsLink" href="#news">Contact Us</a>
     <a class="aboutUsLink" href="#news">About Us</a>
     <div class="dropdown">
@@ -54,7 +55,7 @@
         <div class="container">
           <br>
           <label><b>Username</b></label>
-          <input id="userLogin" type="text" placeholder="Enter Username" name="uname" required>
+          <input type="text" placeholder="Enter Username" name="uname" required>
           <br>
 
           <label><b>Password</b></label>
@@ -62,7 +63,6 @@
           <br>
           <br>
           <button id="login" class="btn" type="submit">Login</button>
-          <button id="logout" class="btn" type="submit">logout</button>
           <button id="create" class="btn" type="submit">Create Account</button>
           <br>
           <label>
@@ -73,17 +73,6 @@
       </div>
     </div>
     <a class="homeLink" href="#news">Home</a>
-
-    <form id="form1" runat="server">
-    <input type='file'id="imgInp1" />
-    </form>
-    <form id="form2" runat="server">
-      <input type='file' id="imgInp2" />
-    </form>
-    <form id="form3" runat="server">
-      <input type='file' id="imgInp3" />
-    </form>
-
   </div>
   <div class="container">
     <div class="container">
@@ -96,34 +85,34 @@
             </div>
             <div class="modal-body">
               <form id="item-form">
-                <label for="item">Enter in Item Name: </label>
-                <input id="item" class="form-control" type="text" maxlength="25">
-                <label for="price">Enter in Price: </label>
+                <label for="item">Enter in Item Name</label>
+                <input id="item" class="form-control" type="text" maxlength="15">
+                <label for="price">Enter in Price</label>
                 <input id="price" class="form-control" type="text" maxlength="10">
-                <label for="phoneNumber">Enter in your best phone number: </label>
-                <input id="phoneNumber" class="form-control" type="text" maxlength="10">
-                <label for="description">Enter in the Item Description: </label>
-                <input id="description" class="form-control" type="text" maxlength="50">
+                <label for="description">Enter in the Item Description</label>
+                <input id="description" class="form-control" type="text" maxlength="40">
+                <!-- <input id="image1" type="file" onchange="previewFile()"><br>
+                <img id="image1" height="200" alt="Image preview..."> -->
               </form>
               <form id="item-form2">
-                <label for="item2">Enter in Item Name: </label>
-                <input id="item2" class="form-control" type="text" maxlength="25">
-                <label for="price2">Enter in Price: </label>
+                <label for="item2">Enter in Item Name</label>
+                <input id="item2" class="form-control" type="text" maxlength="15">
+                <label for="price2">Enter in Price</label>
                 <input id="price2" class="form-control" type="text" maxlength="10">
-                <label for="phoneNumber2">Enter in your best phone number: </label>
-                <input id="phoneNumber2" class="form-control" type="text" maxlength="10">
-                <label for="description2">Enter in the Item Description: </label>
-                <input id="description2" class="form-control" type="text" maxlength="50">
+                <label for="description2">Enter in the Item Description</label>
+                <input id="description2" class="form-control" type="text" maxlength="40">
+                <input id="image1" type="file" onchange="previewFile()"><br>
+                <img id="image1" height="200" alt="Image preview...">
               </form>
               <form id="item-form3">
-                <label for="item3">Enter in Item Name: </label>
-                <input id="item3" class="form-control" type="text" maxlength="25">
-                <label for="price3">Enter in Price: </label>
+                <label for="item3">Enter in Item Name</label>
+                <input id="item3" class="form-control" type="text" maxlength="15">
+                <label for="price3">Enter in Price</label>
                 <input id="price3" class="form-control" type="text" maxlength="10">
-                <label for="phoneNumber3">Enter in your phone number: </label>
-                <input id="phoneNumber3" class="form-control" type="text" maxlength="10">
-                <label for="description3">Enter in the Item Description: </label>
-                <input id="description3" class="form-control" type="text" maxlength="50">
+                <label for="description3">Enter in the Item Description</label>
+                <input id="description3" class="form-control" type="text" maxlength="40">
+                <input id="image1" type="file" onchange="previewFile()"><br>
+                <img id="image1" height="200" alt="Image preview...">
               </form>
             </div>
             <div class="modal-footer">
@@ -139,9 +128,11 @@
     <div id="center" class="aboutUs">
       <div class="well" id="about">
         <h2><center>About Us</h2></center>
-        <p class="alignleft">Here at BorrowUp we do things a little bit differently. BorrowUp is revolutionizing how you rent and lease locally. With a single snap, you can take a photo of an item and instantly circulate it to people nearby. Browse local items by image with
-          thousands of new postings every day! Communicate with sellers entirely through our website. Rent and Lease in less than 30 seconds.
-
+        <p class="alignleft">When visitors view your About Us page, it is an opportunity for you to make them feel comfortable with your organization and establish trust. Many organizations will give their basic contact information and a short paragraph full of fluffy industry
+          buzzwords. I would like to challenge you to take your page a step further, however, by making a connection with your visitors and helping them feel comfortable choosing you. Here are a few steps to perfecting your About Us page. Include your
+          full address, or at least a city and state, to help potential donors and volunteers feel comfortable reaching out or donating to your organization. Make sure contact details are up to date and include links to your social media pages if you
+          have them…and you do have them, right?s There is no perfect formula for an About Us page, however, there are a few basic guidelines to follow. Spend time checking your analytics for traffic volumes, bounce rates and volume duration on your page,
+          and don’t be afraid to make changes accordingly. Your About Us page is a chance to tell your story and build trust with your audience.
       </div>
     </div>
     <div id="center" class="contactUs">
@@ -149,14 +140,16 @@
         <div class="well" id="contact">
           <h2><center>Contact Us</h2></center>
           <ul class="alignleft">
-            <b><li>Frank Ngo</li></b>
-            Email: FrankNgoMusic@gmail.com
-            <b><li>Nicko Dela Cruz</li></b>
-            NeekohlahDC@gmail.com
-            <b><li>Ivan Ramos</li></b>
-            ivanramos148248@gmail.com
-            <b><li>Alex Ficklin</li></b>
-            a.ficklin11@gmail.com
+            <li>Ivan Ramos</li>
+            <li>Email: Ivanramos@mail.com</li>
+            <li>Nicko Dela Cruz</li>
+            <li>nickodc96@gmail.com</li>
+            <li>Alex Ficklin</li>
+            <li>aju32lop@gmail.com</li>
+            <li>Something: Something</li>
+            <li>Something: Something</li>
+            <li>Something: Something</li>
+            <li>Something: Something</li>
           </ul>
         </div>
       </div>
@@ -165,29 +158,18 @@
       <div class="col-lg-6 col-lg-offset-3">
         <div class="well" id="createAccount">
           <h2><center>Create an Account</h2></center>
-          <label for="name">Name: </label>
-          <input id="name" class="form-control" type="text">
-          <label for="userName">Choose your username: </label>
-          <input id="userName" class="form-control" type="text">
-          <label for="password">Choose your password: </label>
-          <input id="password" class="form-control" type="password" name="password">
-          <label for="password">Confirm your password: </label>
-          <input id="password" class="form-control" type="password" name="password">
-          <label for="email">Email: </label>
-          <input id="email" class="form-control" type="text">
-          <label for="phone">Phone Number: </label>
-          <input id="phone" class="form-control" type="text"><br>
-          <button id="confirmAccount" class="btn">Create Account</button>
-        </div>
-      </div>
-    </div>
-    <div id="center" class="confirmEmail">
-      <div class="col-lg-6 col-lg-offset-3">
-        <div class="well" id="confirmEmail">
-          <label>Hey <span class="name"></span> thanks for signing up.</label>
-          <label>Well send you a confirm email to <span class="email"></span></label>
-          <label>Please confirm your email.</label><br><br>
-          <button id="goBack" class="btn">Go Back</button>
+          <label for="item2">Name</label>
+          <input id="item2" class="form-control" type="text">
+          <label for="item2">Choose your username</label>
+          <input id="item2" class="form-control" type="text">
+          <label for="item2">Choose your password</label>
+          <input id="item2" class="form-control" type="text">
+          <label for="item2">Confirm your password</label>
+          <input id="item2" class="form-control" type="text">
+          <label for="item2">Enter in Item Name</label>
+          <input id="item2" class="form-control" type="text">
+          <label for="item2">Enter in Item Name</label>
+          <input id="item2" class="form-control" type="text">
         </div>
       </div>
     </div>
@@ -203,6 +185,8 @@
       <div id="contacts3">
       </div>
     </div>
+    <input type="file">
+
   </div>
 </body>
 </html>
